Added some comments to the README, replaced the index.html file with a new one and added some printf() statements for debugging.

--- a/SD_Card/srv_card/home/root/srv/index.html
+++ b/SD_Card/srv_card/home/root/srv/index.html
@@ -74,7 +74,9 @@
 	function parseMessage(data){
 		ledStateCurrent = data.substr(0,1);
 		voltageValue = data.substring(2);
+		console.info(voltageValue);
 		voltageValue = (voltageValue/1024)*5;
+		voltageValue = voltageValue.toPrecision(3);
 		writeVoltage();
 		if(ledStateCurrent != ledStateOld){
 			changeImage();
