Added support for 'p' pins. Tested analog in A0 and it worked. We need to test the rest Ax and also confirm that Px pins really set the PMW values.

--- a/SD_Card/srv_card/home/root/srv/index.html
+++ b/SD_Card/srv_card/home/root/srv/index.html
@@ -42,7 +42,8 @@
 	
 	function doSend() { 
 		//message = "trigger";
-		message = "D13";
+		//message = "D13";
+		message = "P3,500";
 		try{  
 			console.info("SENT: " + message);  
 			websocket.send(message);  
