--- a/SD_Card/srv_card/home/root/srv/index.html
+++ b/SD_Card/srv_card/home/root/srv/index.html
@@ -11,50 +11,159 @@
     <script src="static/js/underscore-min.js"></script>
     <script src="static/js/app.js"></script>
 
-    <link rel="stylesheet" href="static/css/jquery.mobile-1.4.1.min.css">
+    <link rel="stylesheet" href="static/css/jquery.mobile-1.4.1.css">
     <link rel="stylesheet" href="static/css/app.css">
 </head>
 <body>
     <div class="container" ng-controller="PinsCtrl">
         <div id="field" class="ui-grid-a">
+
             <div id="sensors" class="ui-block-a">
-                <div id="{{pin.id}}" ng-repeat="pin in pins | sensors" ng-class="{'sensor':true, 'pin':true, 'connected':pin.connected_to.length > 0, 'analog': pin.is_analog, 'digital': !pin.is_analog}" sensor>
+
+                <div id="{{pin.id}}"
+                  ng-repeat="pin in pins | sensors"
+                  ng-class="{
+                      'sensor':true,
+                      'pin':true,
+                      'connected':pin.is_connected,
+                      'analog': pin.is_analog,
+                      'digital': !pin.is_analog,
+                      'activated': activated_sensor === pin.id}"
+                  data-name="{{pin.name}}"
+                  sensor>
                     <div class="pin-box">
                         <div class="pin-label">
-                            {{pin.name}}
+                            {{pin.label}}
                         </div>
                         <div class="pin-value-container">
                             <div class="pin-value" style="height:{{pin.value}}%;"></div>
                         </div>
+                        <div class="pin-port">
+                            <div class="endpoint" id="{{pin.id}}-endpoint"></div>
+                        </div>
                     </div>
-                    <div class="pin-port">
-                        <div class="endpoint" id="{{pin.id}}-endpoint"></div>
+                    <div ng-class="{'settings': true,
+                                    'hide': !(settings_pin === pin.id)}">
+                        <div class="settings-inner">
+                            <div class="exit"
+                              ng-click="close_settings()">
+                                  &#x2713;
+                            </div>
+                            <div class="pin-name">
+                                {{pin.name}}
+                            </div>
+                            <input type="text"
+                              ng-model="pin.label"
+                              placeholder="Pin Label"
+                              class="pin-label"
+                              ng-change="send_pin_update([pin.id])"
+                              ng-focus="focus_label()"
+                              ng-blur="unfocus_label()">
+                            <div class="value-label">
+                                Reading
+                            </div>
+                            <div class="pin-value-container">
+                                <div class="pin-value" style="height:{{pin.value}}%;"></div>
+                            </div>
+                            <input type="checkbox"
+                              class="invert"
+                              ng-model="pin.is_inverted"
+                              ng-change="send_pin_update([pin.id])">
+                            <div class="invert-label">
+                                invert
+                            </div>
+                            <div class="sensitivity-label">
+                                Sensitivity
+                            </div>
+                            <input type="range"
+                              class="sensitivity"
+                              ng-model="pin.sensitivity"
+                              min="0"
+                              max="1"
+                              step="0.1"
+                              value="{{pin.sensitivity}}"
+                              ng-change="send_pin_update([pin.id])">
+                        </div>
                     </div>
                 </div>
+
             </div>
+
             <div id="actuators" class="ui-block-b">
-                <div id="{{pin.id}}" ng-repeat="pin in pins | actuators" ng-class="{'actuator':true, 'pin':true, 'connected':pin.connected_to.length > 0, 'analog': pin.is_analog, 'digital': !pin.is_analog}" actuator>
+
+                <div id="{{pin.id}}"
+                  ng-repeat="pin in pins | actuators"
+                  ng-class="{
+                      'actuator':true,
+                      'pin':true,
+                      'connected':pin.is_connected,
+                      'analog': pin.is_analog,
+                      'digital': !pin.is_analog,
+                      'activated': activated_sensor !== null}"
+                  data-name="{{pin.name}}"
+                  actuator>
                     <div class="pin-box">
                         <div class="pin-label">
-                            {{pin.name}}
+                            {{pin.label}}
                         </div>
                         <div class="pin-value-container" ng-click="pin.value = (pin.value === 100) ? 0 : 100">
                             <div class="pin-value" style="height:{{pin.value}}%;"></div>
                         </div>
+                        <div class="pin-port">
+                            <div class="endpoint" id="{{pin.id}}-endpoint"></div>
+                        </div>
                     </div>
-                    <div class="pin-port">
-                        <div class="endpoint" id="{{pin.id}}-endpoint"></div>
+                    <div ng-class="{'settings': true,
+                                    'hide': !(settings_pin === pin.id)}">
+                        <div class="settings-inner">
+                            <div class="exit"
+                              ng-click="close_settings()">
+                                  &#x2713;
+                            </div>
+                            <div class="pin-name">
+                                {{pin.name}}
+                            </div>
+                            <input type="text"
+                              ng-model="pin.label"
+                              placeholder="Pin Label"
+                              class="pin-label"
+                              ng-change="send_pin_update([pin.id])"
+                              ng-focus="focus_label()"
+                              ng-blur="unfocus_label()">
+                            <div class="value-label">
+                                Reading
+                            </div>
+                            <div class="pin-value-container">
+                                <div class="pin-value" style="height:{{pin.value}}%;"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
             </div>
+
             <div id="connections">
-                <div id="connect-{{c.sensor}}-{{c.actuator}}" ng-repeat="c in connections" class="connection" data-sensor="{{c.sensor}}" data-actuator="{{c.actuator}}" connection></div>
+
+                <div id="connect-{{c.source}}-{{c.target}}"
+                  ng-repeat="c in connections"
+                  class="connection"
+                  data-sensor_id="{{c.source}}"
+                  data-actuator_id="{{c.target}}"
+                  connection>
+                </div>
+
             </div>
+
+            <div id="loading" ng-class="{'hide': got_data}"></div>
+
         </div>
-        <div id="debug-log" class="ui-grid-a">
-            
-        </div>
-        <button id="toggle-debug-log" onclick="toggle_debug_log()">TOGGLE DEBUG LOG</button>
+
+
+        <!-- TODO remove when done debugging -->
+        <!--
+        <div id="debug-log" class="ui-grid-a hide"></div>
+        <button id="toggle-debug-log hide" onclick="toggle_debug_log()">TOGGLE DEBUG LOG</button>
+        -->
     </div>
 
 </body>
