--- a/SD_Card/srv_card/home/root/srv/index.html
+++ b/SD_Card/srv_card/home/root/srv/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container" ng-controller="PinsCtrl">
         <div id="field" class="ui-grid-a">
-
+            <!-- TODO make sensors and actuators share a single 'template' -->
             <div id="sensors" class="ui-block-a">
 
                 <div id="{{pin.id}}"
@@ -50,15 +50,13 @@
                                   &#x2713;
                             </div>
                             <div class="pin-name">
-                                {{pin.name}}
+                                {{pin.name}}&nbsp;{{type()}}
                             </div>
                             <input type="text"
-                              ng-model="pin.label"
                               placeholder="Pin Label"
                               class="pin-label"
-                              ng-change="send_pin_update([pin.id])"
-                              ng-focus="focus_label()"
-                              ng-blur="unfocus_label()">
+                              value="{{pin.label}}"
+                              ng-blur="update_pin_label()">
                             <div class="value-label">
                                 Reading
                             </div>
@@ -99,7 +97,8 @@
                       'connected':pin.is_connected,
                       'analog': pin.is_analog,
                       'digital': !pin.is_analog,
-                      'activated': activated_sensor !== null}"
+                      'activated': activated_sensor !== null,
+                      'already-connected-to-activated-sensor': already_connected_to_activated_sensor()}"
                   data-name="{{pin.name}}"
                   actuator>
                     <div class="pin-box">
@@ -110,7 +109,10 @@
                             <div class="pin-value" style="height:{{pin.value}}%;"></div>
                         </div>
                         <div class="pin-port">
-                            <div class="endpoint" id="{{pin.id}}-endpoint"></div>
+                            <div class="endpoint" id="{{pin.id}}-endpoint">
+                                <div class="x-1"></div>
+                                <div class="x-2"></div>
+                            </div>
                         </div>
                     </div>
                     <div ng-class="{'settings': true,
@@ -121,15 +123,13 @@
                                   &#x2713;
                             </div>
                             <div class="pin-name">
-                                {{pin.name}}
+                                {{pin.name}}&nbsp;{{type()}}
                             </div>
                             <input type="text"
-                              ng-model="pin.label"
                               placeholder="Pin Label"
                               class="pin-label"
-                              ng-change="send_pin_update([pin.id])"
-                              ng-focus="focus_label()"
-                              ng-blur="unfocus_label()">
+                              value="{{pin.label}}"
+                              ng-blur="update_pin_label()">
                             <div class="value-label">
                                 Reading
                             </div>
