Incoorporated the latest UI. It is not working. There are some problems transfering the fonts.

--- a/SD_Card/srv_card/home/root/srv/index.html
+++ b/SD_Card/srv_card/home/root/srv/index.html
@@ -7,164 +7,88 @@
     <script src="static/js/jquery-ui.min.js"></script>
     <script src="static/js/angular.min.js"></script>
     <script src="static/js/jquery.jsPlumb-1.4.1-all.js"></script>
-    <script src="static/js/jquery.mobile-1.4.1.js"></script>
     <script src="static/js/underscore-min.js"></script>
     <script src="static/js/app.js"></script>
 
-    <link rel="stylesheet" href="static/css/jquery.mobile-1.4.1.css">
+    <link rel="stylesheet" href="static/fnt/glyphicons-halflings-regular.ttf">
+
+    <link rel="stylesheet" href="static/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/app.css">
 </head>
-<body>
-    <div class="container" ng-controller="PinsCtrl">
-        <div id="field" class="ui-grid-a">
-            <!-- TODO make sensors and actuators share a single 'template' -->
-            <div id="sensors" class="ui-block-a">
+<body ng-controller="PinsCtrl">
 
-                <div id="{{pin.id}}"
-                  ng-repeat="pin in pins | sensors"
+<div id="hide-this-stuff-when-settings-are-shown"
+  ng-class="{'hide': settings_pin !== null}">
+
+    <div id="settings-button" class="black">
+        <span class="glyphicon glyphicon-cog"></span>
+    </div>
+
+    <div id="column-divider" class="gray-border"></div>
+
+    <div id="pins-container" class="container-fluid">
+        <div class="row">
+
+            <div id="sensors" class="col-xs-6">
+                <div
                   ng-class="{
-                      'sensor':true,
-                      'pin':true,
-                      'connected':pin.is_connected,
-                      'analog': pin.is_analog,
-                      'digital': !pin.is_analog,
-                      'activated': activated_sensor === pin.id}"
-                  data-name="{{pin.name}}"
-                  sensor>
-                    <div class="pin-box">
-                        <div class="pin-label">
-                            {{pin.label}}
-                        </div>
-                        <div class="pin-value-container">
-                            <div class="pin-value" style="height:{{pin.value}}%;"></div>
-                        </div>
-                        <div class="pin-port">
-                            <div class="endpoint" id="{{pin.id}}-endpoint"></div>
-                        </div>
-                    </div>
-                    <div ng-class="{'settings': true,
-                                    'hide': !(settings_pin === pin.id)}">
-                        <div class="settings-inner">
-                            <div class="exit"
-                              ng-click="close_settings()">
-                                  &#x2713;
-                            </div>
-                            <div class="pin-name">
-                                {{pin.name}}&nbsp;{{type()}}
-                            </div>
-                            <input type="text"
-                              placeholder="Pin Label"
-                              class="pin-label"
-                              value="{{pin.label}}"
-                              ng-blur="update_pin_label()">
-                            <div class="value-label">
-                                Reading
-                            </div>
-                            <div class="pin-value-container">
-                                <div class="pin-value" style="height:{{pin.value}}%;"></div>
-                            </div>
-                            <input type="checkbox"
-                              class="invert"
-                              ng-model="pin.is_inverted"
-                              ng-change="send_pin_update([pin.id])">
-                            <div class="invert-label">
-                                invert
-                            </div>
-                            <div class="sensitivity-label">
-                                Sensitivity
-                            </div>
-                            <input type="range"
-                              class="sensitivity"
-                              ng-model="pin.sensitivity"
-                              min="0"
-                              max="1"
-                              step="0.1"
-                              value="{{pin.sensitivity}}"
-                              ng-change="send_pin_update([pin.id])">
-                        </div>
-                    </div>
+                      'empty-column-label': true,
+                      'hide': visible_sensors.length > 0}">
+                    sensors
                 </div>
-
+                <div id="{{pin.id}}" ng-repeat="pin in visible_sensors" sensor></div>
             </div>
 
-            <div id="actuators" class="ui-block-b">
-
-                <div id="{{pin.id}}"
-                  ng-repeat="pin in pins | actuators"
+            <div id="actuators" class="col-xs-6">
+                <div
                   ng-class="{
-                      'actuator':true,
-                      'pin':true,
-                      'connected':pin.is_connected,
-                      'analog': pin.is_analog,
-                      'digital': !pin.is_analog,
-                      'activated': activated_sensor !== null,
-                      'already-connected-to-activated-sensor': already_connected_to_activated_sensor()}"
-                  data-name="{{pin.name}}"
-                  actuator>
-                    <div class="pin-box">
-                        <div class="pin-label">
-                            {{pin.label}}
-                        </div>
-                        <div class="pin-value-container" ng-click="pin.value = (pin.value === 100) ? 0 : 100">
-                            <div class="pin-value" style="height:{{pin.value}}%;"></div>
-                        </div>
-                        <div class="pin-port">
-                            <div class="endpoint" id="{{pin.id}}-endpoint">
-                                <div class="x-1"></div>
-                                <div class="x-2"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div ng-class="{'settings': true,
-                                    'hide': !(settings_pin === pin.id)}">
-                        <div class="settings-inner">
-                            <div class="exit"
-                              ng-click="close_settings()">
-                                  &#x2713;
-                            </div>
-                            <div class="pin-name">
-                                {{pin.name}}&nbsp;{{type()}}
-                            </div>
-                            <input type="text"
-                              placeholder="Pin Label"
-                              class="pin-label"
-                              value="{{pin.label}}"
-                              ng-blur="update_pin_label()">
-                            <div class="value-label">
-                                Reading
-                            </div>
-                            <div class="pin-value-container">
-                                <div class="pin-value" style="height:{{pin.value}}%;"></div>
-                            </div>
-                        </div>
-                    </div>
+                      'empty-column-label': true,
+                      'hide': visible_actuators.length > 0}">
+                    actuators
                 </div>
-
+                <div id="{{pin.id}}" ng-repeat="pin in visible_actuators" actuator></div>
             </div>
-
-            <div id="connections">
-
-                <div id="connect-{{c.source}}-{{c.target}}"
-                  ng-repeat="c in connections"
-                  class="connection"
-                  data-sensor_id="{{c.source}}"
-                  data-actuator_id="{{c.target}}"
-                  connection>
-                </div>
-
-            </div>
-
-            <div id="loading" ng-class="{'hide': got_data}"></div>
 
         </div>
-
-
-        <!-- TODO remove when done debugging -->
-        <!--
-        <div id="debug-log" class="ui-grid-a hide"></div>
-        <button id="toggle-debug-log hide" onclick="toggle_debug_log()">TOGGLE DEBUG LOG</button>
-        -->
     </div>
+
+    <div id="connections-container">
+        <div id="connect-{{c.source}}-{{c.target}}"
+          ng-repeat="c in connections"
+          class="connection"
+          data-sensor_id="{{c.source}}"
+          data-actuator_id="{{c.target}}"
+          connection>
+        </div>
+    </div>
+
+    <div id="footer" class="container-fluid">
+        <div class="row">
+            <div class="col-xs-2">
+                <div id="add-sensors-button" class="button square yellow-bg">+</div>
+            </div>
+            <div class="col-xs-8">
+                <div id="play-button" class="button wide black-bg">
+                    <span class="glyphicon glyphicon-play"></span>
+                    Play
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <div id="add-actuators-button" class="button square green-bg">+</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="settings-container">
+    <div ng-repeat="pin in pins" pin-settings></div>
+</div>
+
+<div id="loading" ng-class="{'hide': got_data}">
+    <div id="loading-msg">
+        waiting for server
+    </div>
+</div>
 
 </body>
 </html>
