--- a/SD_Card/srv_card/home/root/srv/index.html
+++ b/SD_Card/srv_card/home/root/srv/index.html
@@ -10,7 +10,7 @@
     <script src="static/js/underscore-min.js"></script>
     <script src="static/js/app.js"></script>
 
-    <link rel="stylesheet" href="static/fnt/glyphicons-halflings-regular.ttf">
+    <!--<link rel="stylesheet" href="static/fnt/glyphicons-halflings-regular.ttf">-->
 
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/app.css">
