--- a/SD_Card/srv_card/home/root/srv/index.html
+++ b/SD_Card/srv_card/home/root/srv/index.html
@@ -4,82 +4,154 @@
     <title>CAT</title>
     <link rel="shortcut icon" href="favicon.ico"/>
     <script src="static/js/jquery.min.js"></script>
-    <script src="static/js/jquery-ui.min.js"></script>
-    <script src="static/js/angular.min.js"></script>
-    <script src="static/js/jquery.jsPlumb-1.4.1-all.js"></script>
     <script src="static/js/underscore-min.js"></script>
+    <script src="static/js/d3.min.js"></script>
+    <script src="static/js/angular.min.js"></script>
     <script src="static/js/app.js"></script>
 
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/app.css">
 </head>
 <body ng-controller="PinsCtrl">
+<div id="app-container">
+    <!-- TODO instead of using my own class 'hide', i should just use ng-show. -->
 
-<div id="hide-this-stuff-when-settings-are-shown"
-  ng-class="{'hide': settings_pin !== null}">
+<div id="settings-button"
+  ng-class="{
+      'black': true,
+      'hide': settings_pin !== null || adding_pins !== null}">
+    <span class="glyphicon glyphicon-cog"></span>
+</div>
 
-    <div id="settings-button" class="black">
-        <span class="glyphicon glyphicon-cog"></span>
-    </div>
+<div id="column-divider"
+  ng-class="{
+      'gray-border': true,
+      'hide': settings_pin !== null || adding_pins !== null}">
+</div>
 
-    <div id="column-divider" class="gray-border"></div>
+<div id="pins-container"
+  ng-class="{
+      'container-fluid': true,
+      'hide': settings_pin !== null || adding_pins !== null}">
+    <div class="row">
 
-    <div id="pins-container" class="container-fluid">
-        <div class="row">
-
-            <div id="sensors" class="col-xs-6">
-                <div
-                  ng-class="{
-                      'empty-column-label': true,
-                      'hide': visible_sensors.length > 0}">
-                    sensors
-                </div>
-                <div id="{{pin.id}}" ng-repeat="pin in visible_sensors" sensor></div>
+        <div id="sensors" class="col-xs-6">
+            <div
+              ng-class="{
+                  'sensors': true,
+                  'column-title': true,
+                  'hide': d.visible_sensors.length > 0}">
+                sensors
             </div>
-
-            <div id="actuators" class="col-xs-6">
-                <div
-                  ng-class="{
-                      'empty-column-label': true,
-                      'hide': visible_actuators.length > 0}">
-                    actuators
-                </div>
-                <div id="{{pin.id}}" ng-repeat="pin in visible_actuators" actuator></div>
-            </div>
-
+            <div id="{{pin.id}}" ng-repeat="(id, pin) in d.visible_sensors" sensor></div>
         </div>
-    </div>
 
-    <div id="connections-container">
-        <div id="connect-{{c.source}}-{{c.target}}"
-          ng-repeat="c in connections"
-          class="connection"
-          data-sensor_id="{{c.source}}"
-          data-actuator_id="{{c.target}}"
-          connection>
-        </div>
-    </div>
-
-    <div id="footer" class="container-fluid">
-        <div class="row">
-            <div class="col-xs-2">
-                <div id="add-sensors-button" class="button square yellow-bg">+</div>
+        <div id="actuators" class="col-xs-6">
+            <div
+              ng-class="{
+                  'actuators': true,
+                  'column-title': true,
+                  'hide': d.visible_actuators.length > 0}">
+                actuators
             </div>
-            <div class="col-xs-8">
-                <div id="play-button" class="button wide black-bg">
-                    <span class="glyphicon glyphicon-play"></span>
-                    Play
+            <div id="{{pin.id}}" ng-repeat="(id, pin) in d.visible_actuators" actuator></div>
+        </div>
+
+    </div>
+</div>
+
+<div id="connections-container"
+  ng-class="{
+      'hide': settings_pin !== null || adding_pins !== null}">
+    <div id="connect-{{c.source}}-{{c.target}}"
+      ng-repeat="c in d.connections"
+      class="connection"
+      ng-show="left !== null"
+      data-sensor_id="{{c.source}}"
+      data-actuator_id="{{c.target}}"
+      connection>
+        <svg style="position: absolute;" pointer-events="none">
+            <path class="edge-bg" pointer-events="none" fill="none"></path>
+            <path class="edge" pointer-events="none" fill="none"></path>
+        </svg>
+
+    </div>
+</div>
+
+<!-- TODO add pins menu should visually contain all pins to add with add-pins-menu-bg" -->
+<div id="add-pins-menu"
+  ng-switch="adding_pins"
+  ng-class="{'hide': settings_pin !== null || adding_pins === null}">
+    <div id="add-pins-menu-pins-container">
+
+        <div id="add-sensors"
+          class="container-fluid sensors"
+          ng-switch-when="sensors">
+
+            <div class="row">
+                <div class="col-xs-12 sensors column-title">
+                    add a sensor
                 </div>
             </div>
-            <div class="col-xs-2">
-                <div id="add-actuators-button" class="button square green-bg">+</div>
+
+            <div class="row">
+                <div class="col-xs-4" ng-repeat="(id, pin) in d.hidden_sensors" pin-stub></div>
+            </div>
+        </div>
+
+        <div id="add-actuators"
+          class="container-fluid actuators"
+          ng-switch-when="actuators">
+
+            <div class="row">
+                <div class="col-xs-12 actuators column-title">
+                    add an actuator
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-4" ng-repeat="(id, pin) in d.hidden_actuators" pin-stub></div>
+            </div>
+        </div>
+
+    </div>
+    <div id="add-pins-menu-bg-footer"
+      ng-class="{
+          'sensors': adding_pins === 'sensors',
+          'actuators': adding_pins === 'actuators'}"></div>
+    <div id="add-pins-menu-bg"></div>
+</div>
+
+<div id="footer"
+  ng-class="{
+      'container-fluid': true,
+      'hide': settings_pin !== null}">
+    <div class="row">
+        <div class="col-xs-2">
+            <div id="add-sensors-button"
+              class="button square yellow-bg"
+              ng-click="toggle_add_pins_menu_for('sensors')">
+                +
+            </div>
+        </div>
+        <div class="col-xs-8">
+            <div id="play-button" class="button wide black-bg">
+                <span class="glyphicon glyphicon-play"></span>
+                Play
+            </div>
+        </div>
+        <div class="col-xs-2">
+            <div id="add-actuators-button"
+              class="button square green-bg"
+              ng-click="toggle_add_pins_menu_for('actuators')">
+                +
             </div>
         </div>
     </div>
 </div>
 
 <div id="settings-container">
-    <div ng-repeat="pin in pins" pin-settings></div>
+    <div ng-repeat="pin in d.pins" pin-settings></div>
 </div>
 
 <div id="loading" ng-class="{'hide': got_data}">
@@ -88,5 +160,6 @@
     </div>
 </div>
 
+</div>
 </body>
 </html>
